[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"
rayon="1.5"
png = "0.17.7"
tobj = "3.2.4"
anyhow = "1.0.70"

[dependencies.indicatif]
version = "0.17.3"
features = ["rayon"]

[dependencies.clap]
version = "4.1.11"
features = ["derive"]

[dependencies.serde]
version = "1.0.160"
features = ["derive"]

[dependencies.confy]
version = "0.5.1"
features = ["ron_conf"]
default_features = false

# uncomment/comment to enable/disable debug symbols
# [profile.release]
# debug = 1
